Modifica artetura do msc

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,5 +6,8 @@
   <header>
     <h1>Bem-vindo ao admin do ReTry</h1>
   </header>
+  <nav>
+    <h3><a href="/admin/questions">Perguntas</a></h3>
+  </nav>
 </body>
 </html>
