--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,5 +9,19 @@
   <nav>
     <h3><a href="/admin/questions">Perguntas</a></h3>
   </nav>
+  <main>
+    <div>
+      <h2>Numero de questões</h2>
+      <p><%= questions %></p>
+    </div>
+    <div>
+      <h2>Numero de questões respondidas</h2>
+      <p>200</p>
+    </div>
+    <div>
+      <h2>Numero de usuários cadastrados</h2>
+      <p>80</p>
+    </div>
+  </main>
 </body>
 </html>
