--- a/src/views/questions/details.ejs
+++ b/src/views/questions/details.ejs
@@ -8,7 +8,28 @@
 </head>
 <body>
   <header>Questão</header>
-  
-  <% console.log(question) %> 
+  <main>
+    <p>Id: <%= question.id %></p>
+    <h4>Pergunta: <%= question.question %></h4>
+    <% if (question.image) { %>
+      <img src=<%=question.image%> />
+    <% } %> 
+    <p>Tipo: <%= question.type %></p>
+    <p>Modulo: <%= question.module_data.module %></p>
+    <p>Bloco: <%= question.block %></p>
+    <p>Tema: <%= question.theme %></p>
+    <p>Dificuldade: <%= question.difficulty %></p>
+    <p>Usuário: <%= question.userId %></p>
+    <br />
+    <br />
+    <% question.answers.forEach((answer) => { %>
+      <p>Id: <%= answer.id %></p>
+      <p>Resposta: <%= answer.answer %></p>
+      <p>Correta: <%= answer.isRight %></p>
+      <p>Dica: <%= answer.hint %></p>
+      <p>Link: <a href=<%= answer.link %>><%= answer.link %></a></p>
+      <br />
+    <% }) %> 
+  </main>
 </body>
 </html>
