Termina formulario de post de question na area admin

--- a/src/views/questions/index.ejs
+++ b/src/views/questions/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +9,14 @@
 <body>
   <header>Questions</header>
   <main>
-    <button><a href="/admin/questions/create">Criar uma pergunta</a></button>
+    <a href="/admin/questions/create"><button>Criar uma pergunta</button></a>
     <% questions.forEach((question) => { %>
       <p>Id: <%= question.id %></p>
       <h4>Pergunta: <%= question.question %></h4>
       <p>Tipo: <%= question.type %></p>
       <p>Modulo: <%= question.module_data.module %></p>
       <p>Bloco: <%= question.block %></p>
-      <button><a href=<%= `/admin/questions/${question.id}` %>>Ver pergunta</a></button>
+      <a href=<%= `/admin/questions/${question.id}` %>><button>Ver pergunta</button></a>
     <% }) %>
   </main>
 </body>
