Adiciona formulario de put questions

--- a/src/views/questions/details.ejs
+++ b/src/views/questions/details.ejs
@@ -9,6 +9,7 @@
 <body>
   <header>Questão</header>
   <main>
+    <a href=<%= `/admin/questions/${question.id}/update` %>><button>Atualizar</button></a>
     <p>Id: <%= question.id %></p>
     <h4>Pergunta: <%= question.question %></h4>
     <% if (question.image) { %>
