Feat filter options

--- a/src/views/questions/details.ejs
+++ b/src/views/questions/details.ejs
@@ -9,6 +9,7 @@
 <body>
   <header>Questão</header>
   <main>
+    <a href="/admin/questions">Voltar</a>
     <a href=<%= `/admin/questions/${question.id}/update` %>><button>Atualizar</button></a>
     <a href=<%= `/admin/questions/${question.id}/delete` %>><button>Deletar</button></a>
 
