--- a/src/views/questions/new.ejs
+++ b/src/views/questions/new.ejs
@@ -9,6 +9,7 @@
 <body>
   <header>Adicionar pergunta</header>
   <main>
+    <a href="/admin/questions">Voltar</a>
     <% if(error) { %>    
       <h3>Erro: <%= error.message %> </h3>
     <% } %> 
