--- a/src/views/questions/update.ejs
+++ b/src/views/questions/update.ejs
@@ -12,6 +12,8 @@
 
   <main>
 
+    <a href='<%= `/admin/questions/${question.id}` %>' >Voltar</a>
+
     <% if(error) { %>    
       <h3>Erro: <%= error.message %> </h3>
     <% } %> 
