--- a/src/views/questions/new.ejs
+++ b/src/views/questions/new.ejs
@@ -1,69 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/new.css">
-  <title>Nova pergunta</title>
-</head>
-<body>
-  <header>
-    <a href="/admin/questions" class="go-back-link">Voltar</a>
-    <h1>
-      Adicionar pergunta
-    </h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/new.css" />
+    <title>Nova pergunta</title>
+  </head>
+  <body>
+    <header>
+      <a href="/admin/questions" class="go-back-link">Voltar</a>
+      <h1>Adicionar pergunta</h1>
     </header>
-  <main>
-    <% if(error) { %>    
-      <h3>Erro: <%= error.message %> </h3>
-    <% } %> 
-    <form action="/admin/questions/create" enctype="multipart/form-data" method="POST">
-      <label>
-        Pergunta: 
-        <input type="text" name="question" />
-      </label>
-      <label>
-        Tipo:
-        <select name="type" id="type">
-          <option value="multi-choice">Multipla escolha</option>
-          <option value="boolean">Verdadeiro ou falso</option>
-        </select>
-      </label>
-      <label>
-        Dificuldade:
-        <select name="difficulty">
-          <option value="1">Fácil</option>
-          <option value="2">Médio</option>
-          <option value="3">Difícil</option>
-        </select>
-      </label>
-      <label>
-        Tema:
-        <input type="text" name="theme" />
-      </label>
-      <label>
-        Imagem:
-        <input type="file" name="image" />
-      </label>
-      <label>
-        Modulo:
-        <select name="module_id">
-          <option value="efff8570-5cb7-4090-bd58-46f4b5a335a6">Fundamentos</option>
-          <option value="a5df9455-4d7f-4f52-94cb-eb830b416cad">Front-end</option>
-          <option value="afdd5680-b811-4aeb-b229-6e7f3351bd01">Back-end</option>
-          <option value="f3ec9930-d2e3-4423-88e8-a28c6aa0265a">Ciência da computação</option>
-        </select>
-      </label>
-      <label>
-        Bloco:
-        <input type="number" name="block" min="1" max="38" />
-      </label>
-      <fieldset id="answers">
-      </fieldset>
-      <button type="submit">Salvar</button>
-    </form>
-  </main>
-  <script src="/questions/new.js"></script>
-</body>
+    <main>
+      <% if(error) { %>
+        <h3>Erro: <%= error.message %></h3>
+        <% } %>
+        <form
+        class="form-new-question"
+        action="/admin/questions/create"
+        enctype="multipart/form-data"
+        method="POST"
+        >
+        <fieldset class="fieldset-new-question">
+          <label>
+            Pergunta:
+            <input type="text" name="question" />
+          </label>
+          <label>
+            Tipo:
+            <select name="type" id="type">
+              <option value="multi-choice">Multipla escolha</option>
+              <option value="boolean">Verdadeiro ou falso</option>
+            </select>
+          </label>
+          <label>
+            Dificuldade:
+            <select name="difficulty">
+              <option value="1">Fácil</option>
+              <option value="2">Médio</option>
+              <option value="3">Difícil</option>
+            </select>
+          </label>
+          <label>
+            Tema:
+            <input type="text" name="theme" />
+          </label>
+          <label>
+            Imagem:
+            <input type="file" name="image" />
+          </label>
+          <label>
+            Modulo:
+            <select name="module_id">
+              <option value="efff8570-5cb7-4090-bd58-46f4b5a335a6">
+                Fundamentos
+              </option>
+              <option value="a5df9455-4d7f-4f52-94cb-eb830b416cad">
+                Front-end
+              </option>
+              <option value="afdd5680-b811-4aeb-b229-6e7f3351bd01">
+                Back-end
+              </option>
+              <option value="f3ec9930-d2e3-4423-88e8-a28c6aa0265a">
+                Ciência da computação
+              </option>
+            </select>
+          </label>
+          <label>
+            Bloco:
+            <input type="number" name="block" min="1" max="38" />
+          </label>
+        </fieldset>
+        <fieldset class="fieldset-new-answers" id="answers"></fieldset>
+        <button class="button-submit-question" type="submit">Salvar</button>
+      </form>
+    </main>
+    <script src="/questions/new.js"></script>
+  </body>
 </html>
