feat style edit question

--- a/src/views/questions/new.ejs
+++ b/src/views/questions/new.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/new.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <title>Nova pergunta</title>
   </head>
   <body>
     <header>
-      <a href="/admin/questions" class="go-back-link">Voltar</a>
+      <a href="/admin/questions" class="go-back-link">&#11013;&nbsp;Voltar</a>
       <h1>Adicionar pergunta</h1>
     </header>
     <main>
