--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles/styles.css" />
+
   <title>ReTry-Admin</title>
 </head>
 <body>
@@ -13,17 +15,19 @@
   <nav>
     <h3><a href="/admin/questions">Perguntas</a></h3>
   </nav>
-  <main>
+  <main class="main-index">
     <div>
-      <h2>Numero de questões</h2>
+      <h2>Número de questões:</h2>
       <p><%= questions %></p>
     </div>
+    <hr>
     <div>
-      <h2>Numero de questões respondidas</h2>
+      <h2>Número de questões respondidas:</h2>
       <p>200</p>
     </div>
+    <hr>
     <div>
-      <h2>Numero de usuários cadastrados</h2>
+      <h2>Número de usuários cadastrados:</h2>
       <p>80</p>
     </div>
   </main>
